fix: fix a error in swagger documentation
